salesforce-metadata/force-app/main/default/objects/Release_Change_C__c/Release_Change_C__c.object-meta.xml
<CustomObject>
    <description>Tracks every component change that will go to production</description>
    <label>Release Change</label>
    <nameField>
        <label>Release_Change__C Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>