salesforce-metadata/force-app/main/default/objects/Release_Change_C__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <description>Flow name,field name, layout name</description>
    <label>Component_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>