salesforce-metadata/force-app/main/default/objects/Release_Change_C__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <description>Making system scalable</description>
    <label>Component_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
            <value>
                <fullName>Page Layout</fullName>
            </value>
            <value>
                <fullName>Lightning Page</fullName>
            </value>
            <value>
                <fullName>Approval Process</fullName>
            </value>
            <value>
                <fullName>Permission Set</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>