salesforce-metadata/force-app/main/default/objects/Release_Change_C__c/fields/Dependency_check__c.field-meta.xml
<CustomField>
    <fullName>Dependency_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependency_check</label>
    <type>Checkbox</type>
</CustomField>