salesforce-metadata/force-app/main/default/objects/Release_Change_C__c/fields/Deployment_Status__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Status__c</fullName>
    <label>Deployment_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Ready for Deployment</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>