salesforce-metadata/force-app/main/default/objects/Release_Change_C__c/fields/Release_Batch__c.field-meta.xml
<CustomField>
    <fullName>Release_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Batch</label>
    <referenceTo>Release_Batch__c</referenceTo>
    <relationshipLabel>Release Changes</relationshipLabel>
    <relationshipName>Release_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>