salesforce-metadata/force-app/main/default/objects/Release_Change_C__c/fields/Risk_level__c.field-meta.xml
<CustomField>
    <fullName>Risk_level__c</fullName>
    <description>This is the intelligence layer</description>
    <label>Risk_level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>