salesforce-metadata/force-app/main/default/objects/Release_Change_C__c/fields/Source_Org__c.field-meta.xml
<CustomField>
    <fullName>Source_Org__c</fullName>
    <label>Source_Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dev Sandbox</fullName>
            </value>
            <value>
                <fullName>QA Sandbox</fullName>
            </value>
            <value>
                <fullName>Full Sandbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>