salesforce-metadata/force-app/main/default/objects/Release_Change_C__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who made this change</description>
    <label>Changed_by_admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>