salesforce-metadata/force-app/main/default/objects/Release_Change_C__c/validationRules/Block_Deployment_With_Dependencies.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Deployment_With_Dependencies</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Deployment_Status__c, &quot;Ready for Deployment&quot;),
Dependency_check__c = TRUE
)</errorConditionFormula>
    <errorMessage>Cannot mark Ready for Deployment while dependencies exist.</errorMessage>
</ValidationRule>